# ml-engineering

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
00_classification_model/: README.md  pyproject.toml
00_classification_model/notebooks/: 01_eda.ipynb  02_logreg_sklearn.ipynb  03_logreg_numpy.ipynb
00_classification_model/report/: week01_summery.md
00_classification_model/src/classification_model/evaluation/: metrics.py
00_classification_model/src/classification_model/models/: logistic_regression.py
00_classification_model/src/data/: preprocessing.py
00_classification_model/subject/: week01_classification_model.md
00_classification_model/tests/: test_logistic_regression.py  test_metrics.py  test_preprocessing.py
01_bike_rental_forecasting/: README.md  pyproject.toml
01_bike_rental_forecasting/data/raw_with_invalid_rows/: holidays.csv  weather.csv
01_bike_rental_forecasting/notebooks/week02_data_pipeline/: 01_preprocessing_workflow_design.ipynb
01_bike_rental_forecasting/notebooks/week03_bike_rental_prediction/: eda.ipynb
01_bike_rental_forecasting/reports/: week02_summery.md  week03_summery.md
01_bike_rental_forecasting/src/bike_rental/: __init__.py  definitions.py
01_bike_rental_forecasting/src/bike_rental/defs/: __init__.py
01_bike_rental_forecasting/src/bike_rental/defs/assets/: __init__.py  preparation.py  preprocessing.py  raw.py
01_bike_rental_forecasting/src/bike_rental/defs/io_managers/: __init__.py  csv_io_manager.py
01_bike_rental_forecasting/src/bike_rental/defs/modeling/: __init__.py
01_bike_rental_forecasting/src/bike_rental/defs/preprocessing/: __init__.py  aggregation.py  enrichment.py  feature_engineering.py  preparation.py  quarantine.py  validate.py
01_bike_rental_forecasting/src/bike_rental/defs/resources/: __init__.py  logging.py  paths.py
01_bike_rental_forecasting/src/bike_rental/defs/utils/: __init__.py  metadata.py
01_bike_rental_forecasting/tests/: test_aggregation.py  test_enrichment.py  test_feature_engineering.py  test_preparation.py
data/raw/: titanic.csv
notebooks/week01_classification_model/: 01_eda.ipynb  02_logreg_sklearn.ipynb  03_logreg_numpy.ipynb
notebooks/week02_data_pipeline/: 01_preprocessing_workflow_design.ipynb
reports/: week01_summery.md  week02_summery.md
src/ml_engineering/data/: preprocessing.py
src/ml_engineering/evaluation/: metrics.py
src/ml_engineering/models/: logistic_regression.py
src/week01/data/: preprocessing.py
src/week01/models/: logistic_regression.py
tests/: test_logistic_regression.py  test_metrics.py  test_preprocessing.py
tests/week01/: test_preprocessing.py
