[project]
name = "ml-engineering"
version = "0.1.0"
description = "End-to-end machine learning engineering and MLOps workflows built during the appliedAI ML & MLOps Track."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "jupyter",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]