[project]
name = "ml-engineering"
version = "0.1.0"
description = "End-to-end machine learning engineering and MLOps workflows built during the appliedAI ML & MLOps Track."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "jupyter",
    "dagster>=1.13.5",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "dagster-webserver>=1.13.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.pytest.ini_options]
testpaths = [
    "00_classification_model/tests",
    "01_bike_rental_forecasting/tests"
]
pythonpath = [
    "00_classification_model/src",
    "01_bike_rental_forecasting/src"
]
