[project]
name = "bike-rental"
version = "0.1.0"
description = "Bike rental forecasting pipeline built with Dagster for the appliedAI ML & MLOps Track."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "jupyter",
    "dagster>=1.13.5",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "dagster-webserver>=1.13.5",
    "dagster-dg-cli",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "bike_rental"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]